[package]
name = "mips-simulator"
version = "0.1.0"
authors = ["Mark Drobnak <mark.drobnak@gmail.com>"]
edition = "2018"

[[bin]]
name = "mips-simulator"
required-features = ["binary"]

[dependencies]
env_logger = { version = "0.7", optional = true }
log = "0.4"
mips-types = { path = "../mips-types" }
structopt = { version = "0.3", optional = true }

[features]
binary = ["env_logger", "structopt"]
